--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,8 @@
 
             <div class="search1">
                 <input class="search2" type="search" name="" placeholder="Search">
-                <a href="#"> <button class="search3">SEARCH</button></a>
+                <a href="#"><button class="search3">SEARCH</button></a>
             </div>
-
         </div>
         
         <div class="content">
@@ -34,23 +33,52 @@
             <br>
             <button class="connect"><a href="#">Know more</a></button>
 
-            <div class="form">
-                <h2>Login Here</h2>
-                <input type="email" name="ID" placeholder="Enter Your ID">
-                <input type="password" name="email" placeholder="Enter Your password">  
-                <button class="formbtn"><a href="schoollist.html">Login</a></button>
-                <br>
-                <p class="link">More<br>
-                <br>
-                <a href="#">Sign Up Here</a><br>
-                <br>
-                <a href="#">Forget Password</a></p>
-            </div>
+        <div class="form">
+            <h2>Login Here</h2>
+            <input type="email" id="email" placeholder="Enter Your Email">
+            <input type="password" id="password" placeholder="Enter Your Password">  
+            <button class="formbtn" onclick="login()">Login</button>
+            <br>
+            <p class="link">More<br><br>
+                <a href="#">Forget Password</a>
+            </p>
         </div>
     </div>
 
     <footer>
         Copyright &copy; Pariwartan
     </footer>
+
+    <script>
+        function login() {
+            const email = document.getElementById('email').value
+            const password = document.getElementById('password').value
+
+            // Example API endpoint (replace with your actual API endpoint)
+            const apiEndpoint = 'https://api.example.com/login'
+
+            // Make a POST request to the API
+            fetch(apiEndpoint, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ email, password })
+            })
+            .then(response => response.json())
+            .then(data => {
+                // Check the response from the server
+                if (data.success) {
+                    console.log('Sucess')
+                    // Redirect or perform other actions as needed
+                } else {
+                    console.log('Failed')
+                }
+            })
+            .catch(error => {
+                console.error('Error during login:', error)
+            });
+        }
+    </script>
 </body>
 </html>
