--- a/public/teacher.html
+++ b/public/teacher.html
@@ -8,15 +8,15 @@
 </head>
 <body>
 
-    <h1 align="Center">Tracking System</h1>
+    <h1 align="center">Tracking System</h1>
 
     <nav>
-    <a href="data.html" class="previous">&laquo; Back</a>
-
-    <a href="teacher.html">Teachers Info</a>
-    <a href="student.html">Students Info</a>
+        <a href="data.html" class="previous">&laquo; Back</a>
+        <a href="teacher.html">Teachers Info</a>
+        <a href="student.html">Students Info</a>
     </nav>
-    <h2 align="Center">Teacher Section/Evaluation Performance</h2>
+
+    <h2 align="center">Teacher Section/Evaluation Performance</h2>
 
     <div class="student-info">
         <div class="attendance">
@@ -32,64 +32,59 @@
                         <th>Present</th>
                         <th>Absent</th>
                         <th>Remarks</th>
+                        <th>Action</th>
                     </tr>
-                    <tbody>
-                        <tr>
-                            <td>vaba</td>
-                            <td><input type="text" id="name" name="name" required></td>
-                            <td><input type="textbox" id="name" name="name" required></td>
-                            <td><input type="date" id="name" name="name" required></td>
-                            <td><input type="checkbox" name="present"></td>
-                            <td><input type="checkbox" name="present"></td>
-                            <td><button class="formbtn"><a href="#">Save</a></button></td>
-                        </tr>
-                        <tr>
-                            <td>baban</td>
-                            <td><input type="text" id="name" name="name" required></td>
-                            <td><input type="textbox" id="name" name="name" required></td>
-                            <td><input type="date" id="name" name="name" required></td>
-                            <td><input type="checkbox" name="present"></td>
-                            <td><input type="checkbox" name="present"></td>
-                            <td><button class="formbtn"><a href="#">Save</a></button></td>
-                        </tr>
-                        <tr>
-                            <td>nama</td>
-                            <td><input type="text" id="name" name="name" required></td>
-                            <td><input type="textbox" id="name" name="name" required></td>
-                            <td><input type="date" id="name" name="name" required></td>
-                            <td><input type="checkbox" name="present"></td>
-                            <td><input type="checkbox" name="present"></td>
-                            <td><button class="formbtn"><a href="#">Save</a></button></td>
-                        </tr>
-                        <tr>
-                            <td>msma</td>
-                            <td><input type="text" id="name" name="name" required></td>
-                            <td><input type="textbox" id="name" name="name" required></td>
-                            <td><input type="date" id="name" name="name" required></td>
-                            <td><input type="checkbox" name="present"></td>
-                            <td><input type="checkbox" name="present"></td>
-                            <td><button class="formbtn"><a href="#">Save</a></button></td>
-                        </tr>
-                        <tr>
-                            <td>akka</td>
-                            <td><input type="text" id="name" name="name" required></td>
-                            <td><input type="textbox" id="name" name="name" required></td>
-                            <td><input type="date" id="name" name="name" required></td>
-                            <td><input type="checkbox" name="present"></td>
-                            <td><input type="checkbox" name="present"></td>
-                            <td><button class="formbtn"><a href="#">Save</a></button></td>
-                        </tr>
-                        <tr>
-                            <td>kajz</td>
-                            <td><input type="text" id="name" name="name" required></td>
-                            <td><input type="textbox" id="name" name="name" required></td>
-                            <td><input type="date" id="name" name="name" required></td>
-                            <td><input type="checkbox" name="present"></td>
-                            <td><input type="checkbox" name="present"></td>
-                            <td><button class="formbtn"><a href="#">Save</a></button></td>
-                        </tr>
-                    </tbody>
                 </thead>
-                </table>
+                <tbody>
+                    <tr>
+                        <td><input type="text" id="name" name="name" required></td>
+                        <td><input type="text" id="subject" name="subject" required></td>
+                        <td><input type="text" id="average" name="average" required></td>
+                        <td><input type="date" id="attendanceDate" name="attendanceDate" required></td>
+                        <td><input type="checkbox" name="present"></td>
+                        <td><input type="checkbox" name="absent"></td>
+                        <td><input type="text" id="remarks" name="remarks"></td>
+                        <td><button class="formbtn" onclick="saveAttendance()">Save</button></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <script>
+        function saveAttendance() {
+            // You can add logic here to send the form data to your server/API
+            // For example, using fetch or other AJAX methods
+            console.log("Attendance data will be saved.");
+        }
+    </script>
+
+</body>
+</html>
+
+  document.addEventListener('DOMContentLoaded', () => {
+    // Fetch data from the API
+    fetch('/api/teacher')
+      .then(response => response.json())
+      .then(data => {
+        // Add data to the table
+        const dataTable = document.getElementById('data-table');
+        const tbody = dataTable.getElementsByTagName('tbody')[0];
+
+        data.forEach(item => {
+          const row = tbody.insertRow();
+          const idCell = row.insertCell(0);
+          const titleCell = row.insertCell(1);
+          const authorCell = row.insertCell(2);
+
+          idCell.textContent = item.id;
+          titleCell.textContent = item.title;
+          authorCell.textContent = item.author;
+          // Add more cells based on your API response structure
+        });
+      })
+      .catch(error => console.error('Error fetching data:', error));
+  });
+</script>
 </body>
 </html>
